# neard

./: .gitignore  .mailmap  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.plugins  README  SECURITY.md  TODO  accflags.m4  acinclude.m4  bootstrap  bootstrap-configure  configure.ac  meson.build  meson.options  neard.pc.in
.github/workflows/: ci-meson.yml  ci.yml  codeql-analysis.yml
ci/: alpine.meson.sh  alpine.sh  archlinux.meson.sh  archlinux.sh  debian.cross-compile.sh  debian.i386.sh  debian.meson.cross-compile.sh  debian.meson.i386.sh  debian.meson.sanitizers.sh  debian.meson.sh  debian.sanitizers.sh  debian.sh  fedora.meson.sh  fedora.sh  ubuntu.cross-compile.sh  ubuntu.i386.sh  ubuntu.meson.cross-compile.sh  ubuntu.meson.i386.sh  ubuntu.meson.sanitizers.sh  ubuntu.meson.sh  ubuntu.sanitizers.sh
doc/: adapter-api.txt  agent-api.txt  coding-style.txt  device-api.txt  features.txt  handover-agent-api.txt  manager-api.txt  neard.8  neard.conf.5  nfctool.1  phdc-api.txt  se-manager-api.txt  secureelement-api.txt  tag-api.txt  target-api.txt
gdbus/: gdbus.h  object.c
include/: adapter.h  dbus.h  device.h  meson.build  ndef.h  nfc_copy.h  plugin.h  setting.h  snep.h  tag.h  target.h  tlv.h  types.h  version.h  version.h.in
plugins/: handover.c  llcp-validation.c  mifare.c  nfctype1.c  nfctype2.c  nfctype3.c  nfctype4.c  nfctype5.c  npp.c  p2p.c  p2p.h  phdc.c  snep-core.c  snep-core.h  snep-validation.c  snep.c
scripts/: neard.in
se/: TODO  ace.c  apdu.c  channel.c  driver.c  driver.h  main.c  manager.c  manager.h  meson.build  org.neard.se.conf  se.c  se.h  seel.h  seeld.pc.in
se/plugins/: nfc.c  tizen.c
se/test/: test-channel  test-seel
src/: adapter.c  agent.c  bluetooth.c  dbus.c  device.c  error.c  genbuiltin  handover.c  log.c  log.h  main.c  main.conf  manager.c  ndef-private.h  ndef.c  near.h  neard.service.in  netlink.c  org.neard.conf  plugin.c  snep.c  tag.c  target.c  tlv.c  types.h
src/near/: meson.build
test/: bt-handover  disable-adapter  dump-device  dump-record  dump-tag  dump-target  enable-adapter  handover-agent  list-adapters  meson.build  monitor-device  monitor-near  monitor-tag  ndef-agent  neard-ui.py  neardutils.py  phdc-simple-manager  publish-record  publish-text-record  push-device  simple-agent  start-poll  stop-poll  test-adapter  test-device  test-tag  write-tag
tools/: meson.build  nciattach.c  snep-send.c
tools/nfctool/: adapter.c  adapter.h  display.c  display.h  llcp-decode.c  llcp-decode.h  main.c  ndef-decode.c  ndef-decode.h  netlink.c  netlink.h  nfctool.h  snep-decode.c  snep-decode.h  sniffer.c  sniffer.h
unit/: meson.build  test-ndef-build.c  test-ndef-parse.c  test-ndef.c  test-snep-read.c  test-utils.c  test-utils.h
